# meowhomo

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
apps/web/: package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  vite-env.d.ts
apps/web/src-tauri/: README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/tauri-plugin/: Cargo.toml
crates/tauri-plugin/src/: lib.rs
deploy/: install.sh  meowhomo.service
docs/: README.md  svg-assets.md
docs/design/: architecture.md  features.md  logging.md
docs/guide/: development.md
docs/reference/: api-reference.md
engine/: config_builder.go  config_builder_test.go  go.mod  go.sum  grpc_server.go  grpc_server_test.go  inbound.go  inbound_test.go  log_hub.go  log_hub_test.go  main.go  manager.go  manager_test.go  mihomo_engine.go  mihomo_engine_test.go  node_parser.go  node_parser_test.go  test_runtime_test.go
engine/proto/: engine.pb.go  engine_grpc.pb.go
proto/: engine.proto
