[package]
name = "meowhomo-core"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sea-orm.workspace = true
tonic.workspace = true
prost.workspace = true
jsonwebtoken.workspace = true
maxminddb.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
