[package]
name = "meowhomo-server"
version.workspace = true
edition.workspace = true

[dependencies]
meowhomo-core = { path = "../core" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rust-embed.workspace = true
